tests/semantic/invalid/expected/undeclared_variable.txt
semantic error: необъявленный идентификатор - идентификатор 'x' не объявлен
  --> tests/semantic/invalid/undeclared_variable.src:2:5
2  x = 10;
   ^
   = идентификатор: 'x'
   = подсказка: проверьте, объявлена ли переменная 'x' в текущей области видимости

semantic error: несоответствие типов - несоответствие типов в присваивании
  --> tests/semantic/invalid/undeclared_variable.src:2:5
2  x = 10;
   ^

